--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
       </div>
     </div>
 
-    <div id="photoGalleryPage" style="display: none; height: 100%; width: 100%;">
+    <div id="photoGalleryPage" style="display: none; height: 1000px;">
       <h1 class="forbesH1" id="serviceMenu">PHOTO GALLERY</h1>
-      <div id="pixlee_container" style="display: inline;"></div>
+      <div id="pixlee_container"></div>
       <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'2LuBwUS2ObJA0ZRtcYP3'});Pixlee.addSimpleWidget({widgetId:'9343'});};</script>
       <script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
     </div>
