--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
     </div>
 
-    <div id="photoGalleryPage" style="display: none; height: 1000px;">
+    <div id="photoGalleryPage" style="display: none; height: 1000px; width: 100%;">
       <h1 class="forbesH1" id="serviceMenu">PHOTO GALLERY</h1>
       <div id="pixlee_container"></div>
       <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'2LuBwUS2ObJA0ZRtcYP3'});Pixlee.addSimpleWidget({widgetId:'9343'});};</script>
