--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <div id="photoGalleryPage" style="display: none; width: 100%; height: 100%;">
       <h1 class="forbesH1" id="serviceMenu">PHOTO GALLERY</h1>
-      <div id="pixlee_container"></div>
+      <div id="pixlee_container" style="width: 100%; height: 100%;"></div>
       <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'2LuBwUS2ObJA0ZRtcYP3'});Pixlee.addSimpleWidget({widgetId:'9343'});};</script>
       <script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
     </div>
