--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
            onclick="photoGalleryClick()">
            PHOTO GALLERY</p>
         <p class="topnavlast"
-           id="aboutUs">
+           id="aboutUs"
+           onclick="aboutUsClick()">
            ABOUT US</p>
       </div>
     </div>
@@ -59,7 +60,7 @@
         <a href="#" class="forbesH2mobileNav" onclick="bookNowClick()">Book Now</a>
         <!-- <a href="#" class="forbesH2mobileNav">Service Menu</a> -->
         <a href="#" class="forbesH2mobileNav" onclick="photoGalleryClick()">Photo Gallery</a>
-        <a href="#" class="forbesH2mobileNav">About Us</a>
+        <a href="#" class="forbesH2mobileNav" onclick="aboutUsClick()">About Us</a>
       </div>
       <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -149,6 +150,8 @@
           </div>
         </div>
       </div>
+      <h1 class="forbesH1" id="serviceMenu">LOCATION</h1>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.4094615618556!2d-117.68223008491336!3d33.59467894915108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dce96f00b5adb9%3A0x16bce02f1f559106!2sForbes+Barber+Company!5e0!3m2!1sen!2sus!4v1539572827958" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
     <!-- <div id="photoGalleryPage" style="display: none; width: 100%; height: 100%;">
@@ -157,35 +160,37 @@
       <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'2LuBwUS2ObJA0ZRtcYP3'});Pixlee.addSimpleWidget({widgetId:'9343'});};</script>
       <script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
     </div> -->
-
-    <div class="container" id="aboutUsPage">
-      <div class="row" style="text-align: center">
-        <div class="col">
-          <h3 class="forbesH1">Mark Forbes</h3>
-          <img src="./images/aboutUs/mark.JPG" style="height: 200px; border-radius: 100px">
-          <h3 class="bookNow" id="mark" onclick="bookWithStaff(event)">BOOK WITH BRANDON</h3>
+    <div  id="aboutUsPage" style="display: none">
+      <h1 class="forbesH1">~ OUR STAFF ~</h1>
+      <div class="container">
+        <div class="row" style="text-align: center">
+          <div class="col">
+            <h3 class="forbesH1">Mark Forbes</h3>
+            <img src="./images/aboutUs/mark.JPG" style="height: 200px; border-radius: 100px">
+            <h3 class="bookNow" id="mark" onclick="bookWithStaff(event)">BOOK WITH BRANDON</h3>
+          </div>
+          <div class="col">
+            <h3 class="forbesH1">Evan Apodaca</h3>
+            <img src="./images/aboutUs/evan.JPG" style="height: 200px; border-radius: 100px">
+            <h3 class="bookNow" id="evan" onclick="bookWithStaff(event)">BOOK WITH EVAN</h3>
+          </div>
+          <div class="col">
+            <h3 class="forbesH1">Brandon Duby</h3>
+            <img src="./images/aboutUs/brandon.JPG" style="height: 200px; border-radius: 100px">
+            <h3 class="bookNow" id="brandon" onclick="bookWithStaff(event)">BOOK WITH BRANDON</h3>
+          </div>
         </div>
-        <div class="col">
-          <h3 class="forbesH1">Evan Apodaca</h3>
-          <img src="./images/aboutUs/evan.JPG" style="height: 200px; border-radius: 100px">
-          <h3 class="bookNow" id="evan" onclick="bookWithStaff(event)">BOOK WITH EVAN</h3>
-        </div>
-        <div class="col">
-          <h3 class="forbesH1">Brandon Duby</h3>
-          <img src="./images/aboutUs/brandon.JPG" style="height: 200px; border-radius: 100px">
-          <h3 class="bookNow" id="brandon" onclick="bookWithStaff(event)">BOOK WITH BRANDON</h3>
-        </div>
+        <!-- <div class="row">
+          <div class="col">
+            <h3 class="forbesH1">Thomas Ficcadenti</h3>
+            <img src="./images/aboutUs/mark.JPG" style="height: 200px; border-radius: 100px">
+          </div>
+          <div class="col">
+            <img>
+            <h3 class="forbesH1">Thomas Ficcadenti</h3>
+          </div>
+        </div> -->
       </div>
-      <!-- <div class="row">
-        <div class="col">
-          <h3 class="forbesH1">Thomas Ficcadenti</h3>
-          <img src="./images/aboutUs/mark.JPG" style="height: 200px; border-radius: 100px">
-        </div>
-        <div class="col">
-          <img>
-          <h3 class="forbesH1">Thomas Ficcadenti</h3>
-        </div>
-      </div> -->
     </div>
   </body>
 </html>
