fixed book now buttons

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-primary" style="font-family: LATO; padding-left: 20px; padding-right: 20px;">Book Now!</button>
+        <button class="btn btn-primary" style="font-family: LATO; padding-left: 20px; padding-right: 20px;" onclick="bookNowClick()">Book Now!</button>
       </div>
 
       <div class="on-color">
@@ -141,7 +141,7 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-primary" style="font-family: LATO; padding-left: 20px; padding-right: 20px;">Book Now!</button>
+        <button class="btn btn-primary" style="font-family: LATO; padding-left: 20px; padding-right: 20px;" onclick="bookNowClick()">Book Now!</button>
       </div>
 
       <div  class="off-color">
@@ -169,7 +169,7 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-primary" style="font-family: LATO; padding-left: 20px; padding-right: 20px;">Book Now!</button>
+        <button class="btn btn-primary" style="font-family: LATO; padding-left: 20px; padding-right: 20px;" onclick="bookNowClick()">Book Now!</button>
       </div>
 
       <div class="on-color">
@@ -226,7 +226,7 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-primary" style="font-family: LATO; padding-left: 20px; padding-right: 20px;">Book Now!</button>
+        <button class="btn btn-primary" style="font-family: LATO; padding-left: 20px; padding-right: 20px;" onclick="bookNowClick()">Book Now!</button>
       </div>
 
     </div>
